2011-09-21  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Dropped hwloc minimum requirement to 1.2.
	* configure: Regenerated (autoconf 2.67).

	* configure.in: [Issue 9, 10]: Reworked the code determining the
	  hwloc flags to accept a --with-hwloc switch for custom location,
	  also using directories derived from (exec-)prefix as
	  defaults. Further extended with a check for existence and check
	  of minimum required version before accepting it and attempting
	  to get the libs and c-flags.

	* tclhwloc.m4: New file, contains the m4 helper macro actually
	  implementing all of the above.
	* aclocal.m4: Added tclhwloc.m4 to sourced files.

	* configure: Regenerated (autoconf 2.57).

	* README: [Issue 11] Updated contents to properly contain the
	  tcl-hwloc location, build instructions, etc. Removed all
	  references to the sampleextension.
	* README.hwloc: Removed file. Folded into the README.
	* license.terms: Formatted to use shorter line lengths.

2011-09-20  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Completed the documentation of cpubind and
	  membind. Together with the test suite we are now pretty much
	  done, except for any fiddling with the API.
	* doc/tcl-hwloc.n: Regenerated.
	* doc/tcl-hwloc.nhtml: New file, manpage in HTML.

	* generic/topology.c: Fixed typo in membind argument error
	  message.

	* generic/cpubind.c: Fixed bug in -pid/-thread handling.
	* tests/topology_cpubind.test: Added test for the above.

	* generic/membind.c: Fixed bugs in my work.
	* tests/topology_membind.test: Created testsuite, analogous to
	  "topology_cpubind.test".

	* tests/old-bindings.tcl: New file, moved George's old
	  cpubind/membind test code there.

2011-09-19  Andreas Kupries  <andreask@activestate.com>

	* generic/membind.c: Reworked the 'membind' method to be have
	* doc/instance.inc: the same API as the 'cpubind' method, within
	  reason. Started on the documentation for 'membind'.
